@@ -1,34 +1,20 @@
 require 'spec_helper'
 
-describe Gitlab::OAuth::User, lib: true do
-  let(:oauth_user) { Gitlab::OAuth::User.new(auth_hash) }
-  let(:gl_user) { oauth_user.gl_user }
+describe Gitlab::Saml::User, lib: true do
+  let(:saml_user) { described_class.new(auth_hash) }
+  let(:gl_user) { saml_user.gl_user }
   let(:uid) { 'my-uid' }
-  let(:provider) { 'my-provider' }
+  let(:provider) { 'saml' }
   let(:auth_hash) { OmniAuth::AuthHash.new(uid: uid, provider: provider, info: info_hash) }
   let(:info_hash) do
     {
-      nickname: '-john+gitlab-ETC%.git@gmail.com',
       name: 'John',
       email: 'john@mail.com'
     }
   end
   let(:ldap_user) { Gitlab::LDAP::Person.new(Net::LDAP::Entry.new, 'ldapmain') }
 
-  describe :persisted? do
-    let!(:existing_user) { create(:omniauth_user, extern_uid: 'my-uid', provider: 'my-provider') }
-
-    it "finds an existing user based on uid and provider (facebook)" do
-      expect( oauth_user.persisted? ).to be_truthy
-    end
-
-    it "returns false if use is not found in database" do
-      allow(auth_hash).to receive(:uid).and_return('non-existing')
-      expect( oauth_user.persisted? ).to be_falsey
-    end
-  end
-
-  describe :save do
+  describe '#save' do
     def stub_omniauth_config(messages)
       allow(Gitlab.config.omniauth).to receive_messages(messages)
     end
@@ -37,69 +23,69 @@ describe Gitlab::OAuth::User, lib: true do
       allow(Gitlab::LDAP::Config).to receive_messages(messages)
     end
 
-    let(:provider) { 'twitter' }
+    describe 'account exists on server' do
+      before { stub_omniauth_config({ allow_single_sign_on: ['saml'], auto_link_saml_user: true }) }
+      context 'and should bind with SAML' do
+        let!(:existing_user) { create(:user, email: 'john@mail.com', username: 'john') }
+        it 'adds the SAML identity to the existing user' do
+          saml_user.save
+          expect(gl_user).to be_valid
+          expect(gl_user).to eq existing_user
+          identity = gl_user.identities.first
+          expect(identity.extern_uid).to eql uid
+          expect(identity.provider).to eql 'saml'
+        end
+      end
+    end
 
-    describe 'signup' do
-      shared_examples "to verify compliance with allow_single_sign_on" do
-        context "with new allow_single_sign_on enabled syntax" do
-          before { stub_omniauth_config(allow_single_sign_on: ['twitter']) }
+    describe 'no account exists on server' do
+      shared_examples 'to verify compliance with allow_single_sign_on' do
+        context 'with allow_single_sign_on enabled' do
+          before { stub_omniauth_config(allow_single_sign_on: ['saml']) }
 
-          it "creates a user from Omniauth" do
-            oauth_user.save
+          it 'creates a user from SAML' do
+            saml_user.save
 
             expect(gl_user).to be_valid
             identity = gl_user.identities.first
             expect(identity.extern_uid).to eql uid
-            expect(identity.provider).to eql 'twitter'
+            expect(identity.provider).to eql 'saml'
           end
         end
 
-        context "with old allow_single_sign_on enabled syntax" do
-          before { stub_omniauth_config(allow_single_sign_on: true) }
-
-          it "creates a user from Omniauth" do
-            oauth_user.save
-
-            expect(gl_user).to be_valid
-            identity = gl_user.identities.first
-            expect(identity.extern_uid).to eql uid
-            expect(identity.provider).to eql 'twitter'
+        context 'with allow_single_sign_on default (["saml"])' do
+          before { stub_omniauth_config(allow_single_sign_on: ['saml']) }
+          it 'should not throw an error' do
+            expect{ saml_user.save }.not_to raise_error
           end
         end
 
-        context "with new allow_single_sign_on disabled syntax" do
-          before { stub_omniauth_config(allow_single_sign_on: []) }
-          it "throws an error" do
-            expect{ oauth_user.save }.to raise_error StandardError
-          end
-        end
-
-        context "with old allow_single_sign_on disabled (Default)" do
+        context 'with allow_single_sign_on disabled' do
           before { stub_omniauth_config(allow_single_sign_on: false) }
-          it "throws an error" do
-            expect{ oauth_user.save }.to raise_error StandardError
+          it 'should throw an error' do
+            expect{ saml_user.save }.to raise_error StandardError
           end
         end
       end
 
-      context "with auto_link_ldap_user disabled (default)" do
-        before { stub_omniauth_config(auto_link_ldap_user: false) }
-        include_examples "to verify compliance with allow_single_sign_on"
+      context 'with auto_link_ldap_user disabled (default)' do
+        before { stub_omniauth_config({ auto_link_ldap_user: false, auto_link_saml_user: false, allow_single_sign_on: ['saml'] }) }
+        include_examples 'to verify compliance with allow_single_sign_on'
       end
 
-      context "with auto_link_ldap_user enabled" do
-        before { stub_omniauth_config(auto_link_ldap_user: true) }
+      context 'with auto_link_ldap_user enabled' do
+        before { stub_omniauth_config({ auto_link_ldap_user: true, auto_link_saml_user: false }) }
 
-        context "and no LDAP provider defined" do
+        context 'and no LDAP provider defined' do
           before { stub_ldap_config(providers: []) }
 
-          include_examples "to verify compliance with allow_single_sign_on"
+          include_examples 'to verify compliance with allow_single_sign_on'
         end
 
-        context "and at least one LDAP provider is defined" do
+        context 'and at least one LDAP provider is defined' do
           before { stub_ldap_config(providers: %w(ldapmain)) }
 
-          context "and a corresponding LDAP person" do
+          context 'and a corresponding LDAP person' do
             before do
               allow(ldap_user).to receive(:uid) { uid }
               allow(ldap_user).to receive(:username) { uid }
@@ -108,45 +94,43 @@ describe Gitlab::OAuth::User, lib: true do
               allow(Gitlab::LDAP::Person).to receive(:find_by_uid).and_return(ldap_user)
             end
 
-            context "and no account for the LDAP user" do
+            context 'and no account for the LDAP user' do
 
-              it "creates a user with dual LDAP and omniauth identities" do
-                oauth_user.save
+              it 'creates a user with dual LDAP and SAML identities' do
+                saml_user.save
 
                 expect(gl_user).to be_valid
                 expect(gl_user.username).to eql uid
                 expect(gl_user.email).to eql 'johndoe@example.com'
                 expect(gl_user.identities.length).to eql 2
                 identities_as_hash = gl_user.identities.map { |id| { provider: id.provider, extern_uid: id.extern_uid } }
-                expect(identities_as_hash).to match_array(
-                  [ { provider: 'ldapmain', extern_uid: 'uid=user1,ou=People,dc=example' },
-                    { provider: 'twitter', extern_uid: uid }
-                  ])
+                expect(identities_as_hash).to match_array([ { provider: 'ldapmain', extern_uid: 'uid=user1,ou=People,dc=example' },
+                                                            { provider: 'saml', extern_uid: uid }
+                                                          ])
               end
             end
 
-            context "and LDAP user has an account already" do
+            context 'and LDAP user has an account already' do
               let!(:existing_user) { create(:omniauth_user, email: 'john@example.com', extern_uid: 'uid=user1,ou=People,dc=example', provider: 'ldapmain', username: 'john') }
               it "adds the omniauth identity to the LDAP account" do
-                oauth_user.save
+                saml_user.save
 
                 expect(gl_user).to be_valid
                 expect(gl_user.username).to eql 'john'
                 expect(gl_user.email).to eql 'john@example.com'
                 expect(gl_user.identities.length).to eql 2
                 identities_as_hash = gl_user.identities.map { |id| { provider: id.provider, extern_uid: id.extern_uid } }
-                expect(identities_as_hash).to match_array(
-                  [ { provider: 'ldapmain', extern_uid: 'uid=user1,ou=People,dc=example' },
-                    { provider: 'twitter', extern_uid: uid }
-                  ])
+                expect(identities_as_hash).to match_array([ { provider: 'ldapmain', extern_uid: 'uid=user1,ou=People,dc=example' },
+                                                            { provider: 'saml', extern_uid: uid }
+                                                          ])
               end
             end
           end
 
-          context "and no corresponding LDAP person" do
+          context 'and no corresponding LDAP person' do
             before { allow(Gitlab::LDAP::Person).to receive(:find_by_uid).and_return(nil) }
 
-            include_examples "to verify compliance with allow_single_sign_on"
+            include_examples 'to verify compliance with allow_single_sign_on'
           end
         end
       end
@@ -154,15 +138,14 @@ describe Gitlab::OAuth::User, lib: true do
     end
 
     describe 'blocking' do
-      let(:provider) { 'twitter' }
-      before { stub_omniauth_config(allow_single_sign_on: ['twitter']) }
+      before { stub_omniauth_config({ allow_saml_sign_up: true, auto_link_saml_user: true }) }
 
-      context 'signup with omniauth only' do
+      context 'signup with SAML only' do
         context 'dont block on create' do
           before { stub_omniauth_config(block_auto_created_users: false) }
 
-          it do
-            oauth_user.save
+          it 'should not block the user' do
+            saml_user.save
             expect(gl_user).to be_valid
             expect(gl_user).not_to be_blocked
           end
@@ -171,8 +154,8 @@ describe Gitlab::OAuth::User, lib: true do
         context 'block on create' do
           before { stub_omniauth_config(block_auto_created_users: true) }
 
-          it do
-            oauth_user.save
+          it 'should block user' do
+            saml_user.save
             expect(gl_user).to be_valid
             expect(gl_user).to be_blocked
           end
@@ -186,7 +169,7 @@ describe Gitlab::OAuth::User, lib: true do
           allow(ldap_user).to receive(:username) { uid }
           allow(ldap_user).to receive(:email) { ['johndoe@example.com','john2@example.com'] }
           allow(ldap_user).to receive(:dn) { 'uid=user1,ou=People,dc=example' }
-          allow(oauth_user).to receive(:ldap_person).and_return(ldap_user)
+          allow(saml_user).to receive(:ldap_person).and_return(ldap_user)
         end
 
         context "and no account for the LDAP user" do
@@ -194,7 +177,7 @@ describe Gitlab::OAuth::User, lib: true do
             before { allow_any_instance_of(Gitlab::LDAP::Config).to receive_messages(block_auto_created_users: false) }
 
             it do
-              oauth_user.save
+              saml_user.save
               expect(gl_user).to be_valid
               expect(gl_user).not_to be_blocked
             end
@@ -204,7 +187,7 @@ describe Gitlab::OAuth::User, lib: true do
             before { allow_any_instance_of(Gitlab::LDAP::Config).to receive_messages(block_auto_created_users: true) }
 
             it do
-              oauth_user.save
+              saml_user.save
               expect(gl_user).to be_valid
               expect(gl_user).to be_blocked
             end
@@ -218,7 +201,7 @@ describe Gitlab::OAuth::User, lib: true do
             before { allow_any_instance_of(Gitlab::LDAP::Config).to receive_messages(block_auto_created_users: false) }
 
             it do
-              oauth_user.save
+              saml_user.save
               expect(gl_user).to be_valid
               expect(gl_user).not_to be_blocked
             end
@@ -228,7 +211,7 @@ describe Gitlab::OAuth::User, lib: true do
             before { allow_any_instance_of(Gitlab::LDAP::Config).to receive_messages(block_auto_created_users: true) }
 
             it do
-              oauth_user.save
+              saml_user.save
               expect(gl_user).to be_valid
               expect(gl_user).not_to be_blocked
             end
@@ -239,15 +222,15 @@ describe Gitlab::OAuth::User, lib: true do
 
       context 'sign-in' do
         before do
-          oauth_user.save
-          oauth_user.gl_user.activate
+          saml_user.save
+          saml_user.gl_user.activate
         end
 
         context 'dont block on create' do
           before { stub_omniauth_config(block_auto_created_users: false) }
 
           it do
-            oauth_user.save
+            saml_user.save
             expect(gl_user).to be_valid
             expect(gl_user).not_to be_blocked
           end
@@ -257,7 +240,7 @@ describe Gitlab::OAuth::User, lib: true do
           before { stub_omniauth_config(block_auto_created_users: true) }
 
           it do
-            oauth_user.save
+            saml_user.save
             expect(gl_user).to be_valid
             expect(gl_user).not_to be_blocked
           end
@@ -267,7 +250,7 @@ describe Gitlab::OAuth::User, lib: true do
           before { allow_any_instance_of(Gitlab::LDAP::Config).to receive_messages(block_auto_created_users: false) }
 
           it do
-            oauth_user.save
+            saml_user.save
             expect(gl_user).to be_valid
             expect(gl_user).not_to be_blocked
           end
@@ -277,7 +260,7 @@ describe Gitlab::OAuth::User, lib: true do
           before { allow_any_instance_of(Gitlab::LDAP::Config).to receive_messages(block_auto_created_users: true) }
 
           it do
-            oauth_user.save
+            saml_user.save
             expect(gl_user).to be_valid
             expect(gl_user).not_to be_blocked
           end
