@@ -66,6 +66,9 @@ v 8.5.0 (unreleased)
   - Fix builds scheduler when first build in stage was allowed to fail
   - User project limit is reached notice is hidden if the projects limit is zero 
   - Add API support for managing runners and project's runners
+  - Allow SAML users to login with no previous account without having to allow
+    all Omniauth providers to do so.
+  - Allow existing users to auto link their SAML credentials by logging in via SAML
 
 v 8.4.4
   - Update omniauth-saml gem to 1.4.2
